--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,9 @@ repositories {
 
 dependencies {
 	implementation 'jakarta.platform:jakarta.jakartaee-web-api:10.0.0'
+
+	compileOnly 'org.projectlombok:lombok:1.18.30'
+	annotationProcessor 'org.projectlombok:lombok:1.18.30'
 }
 
 war {
