--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
 	id 'java'
+	id 'war'
 }
 
 group = 'com.enzulode'
@@ -12,4 +13,15 @@ java {
 
 repositories {
 	mavenCentral()
+}
+
+dependencies {
+	implementation 'jakarta.platform:jakarta.jakartaee-web-api:10.0.0'
+
+	compileOnly 'org.projectlombok:lombok:1.18.30'
+	annotationProcessor 'org.projectlombok:lombok:1.18.30'
+}
+
+war {
+	archiveName rootProject.name
 }
