--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,8 @@ dependencies {
 
 	compileOnly 'org.projectlombok:lombok:1.18.30'
 	annotationProcessor 'org.projectlombok:lombok:1.18.30'
+
+	implementation 'org.glassfish.web:jakarta.servlet.jsp.jstl:3.0.1'
 }
 
 war {
